compiler/tests/success/arm-m4/test_global_string_literal.jazz
u8[10] test = "Teststring";

export fn main() -> reg u32
{
    reg u32 res tmp;
    res = 0x54;

    tmp = (32u)test[0];
    res = res ^ tmp;

    return res;
}
