compiler/tests/fail/subarrays/x86-64/stack.jazz
// should this succeed?

fn f () -> reg u32 {
  reg u32 tmp;
  tmp = 0;
  return tmp;
}

export fn main () -> reg u32 {
  stack u32[10] s;
  stack u32[5] s2;
  reg u32 res tmp i;
  res = 0;
  i = 0;
  s2 = s.[i:5];
  res = s2[0];
  return res;
}
